# sqlx

./: .gitignore  README.md  sqlx.cabal  stack.yaml
parser/: queryparser.cabal
parser/demo/: queryparser-demo.cabal
parser/dialects/hive/: queryparser-hive.cabal
parser/dialects/presto/: queryparser-presto.cabal
parser/dialects/vertica/: queryparser-vertica.cabal
parser/misc/predicate-class/: predicate-class.cabal
parser/src/Database/Sql/Type/: Names.hs
parser/src/Database/Sql/Util/: Tables.hs
parser/test/: queryparser-test.cabal
test/: sqlx-test.cabal
